--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,9 @@ h1, h2, h3, h4, h5, h6{
     margin-bottom:2px;
     text-align: center;
 }
-
+div{
+    border:1px solid lightgray;
+}
 .horizontal {
     overflow:auto;
     width: 100%;
@@ -38,5 +40,6 @@ h1, h2, h3, h4, h5, h6{
 
 .zoom {
     cursor: move;
+    fill: none;
     pointer-events: all;
 }
