--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,3 +48,42 @@ div{
 .grid path {
     stroke-width: 0;
 }
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 175px;
+    height: 28px;
+    padding: 2px;
+    font: 11px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
+.select{
+    float:right;
+    width: 20%;
+    margin: 1px;
+    padding: 2px;
+}
+
+path {
+    stroke: black;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+td, th {
+    padding: 1px 4px;
+    border: 1px black solid;
+}
