--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,34 +1,13 @@
-html, body{
-    width:100%;
-    height:100%;
-    margin:0;
+body{
     font-family: 'Ubuntu', sans-serif;
+    padding-top: 65px;
 }
 h1, h2, h3, h4, h5, h6{
     margin-top:5px;
     margin-bottom:2px;
     text-align: center;
 }
-div{
-    border:1px solid lightgray;
-}
-.horizontal {
-    overflow:auto;
-    width: 100%;
-    padding: 2em;
-}
 
-.left, .right {
-    width: 45%;
-    margin: 1px;
-    padding: 2px;
-}
-.left {
-    float:left;
-}
-.right {
-    float:right;
-}
 .line {
     fill: none;
     clip-path: url(#clip);
@@ -47,4 +26,48 @@ div{
 
 .grid path {
     stroke-width: 0;
+}
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 175px;
+    height: 28px;
+    padding: 2px;
+    font: 11px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
+.select{
+    float:right;
+    width: 20%;
+    margin: 1px;
+    padding: 2px;
+}
+
+path {
+    stroke: black;
+    stroke-width: 2;
+    fill: none;
+}
+
+#sunburst path {
+    stroke: white;
+    stroke-width: 1;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+td, th {
+    padding: 1px 4px;
+    border: 1px black solid;
 }
