--- a/assets/styles.css
+++ b/assets/styles.css
@@ -59,6 +59,16 @@ path {
     stroke-width: 1;
 }
 
+#explanation {
+    text-align: center;
+    color: #666;
+    z-index: -1;
+}
+
+#percentage {
+    font-size: 2.5em;
+}
+
 .axis path,
 .axis line {
     fill: none;
